# shift-assignment-system

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
shift_scheduler/cli/: app.py
shift_scheduler/cli/commands/: config_schema.py  run.py  version.py
shift_scheduler/configurations/: __init__.py  configuration.py  io.py  worker.py
shift_scheduler/schedules/: constants.py  exceptions.py  manager.py  types.py  variables.py
shift_scheduler/schedules/constraints/: __init__.py  after_afternoon_shifts.py  after_night_shifts.py  annual_leaves.py  base.py  birthday_leave.py  consecutive_ap_shifts.py  consecutive_night_shifts.py  consecutive_time_offs.py  consecutive_working_days.py  daily_assignment.py  part_time.py  public_holidays.py  requested_shifts.py  time_offs.py  utils.py  workers_in_afternoon_shifts.py  workers_in_morning_shifts.py  workers_in_night_shifts.py  workers_in_special_working_shifts.py  working_hours.py
shift_scheduler/utils/: datetime_utils.py  file_utils.py  serialization_utils.py
